# pipeline_debug_env

./: .gitignore  Dockerfile  Pipeline_Debug_Env_Architecture.docx  README.md  eval_output.txt  evaluation_report.md  inference.py  openenv.yaml  output_fallback.txt  pyproject.toml  read_docx.py  read_docx_fallback.py  requirements.txt  test_live.py
pipeline_debug_env/: __init__.py  client.py  models.py
pipeline_debug_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline_debug_env/baseline/: __init__.py  heuristic_agent.py  run_eval.py
pipeline_debug_env/core/: action_parser.py  environment.py  episode_manager.py  fault_injector.py  grader.py  pipeline_executor.py
pipeline_debug_env/server/: __init__.py  action_parser.py  app.py  demo_routes.py  episode_manager.py  fault_injector.py  observation_builder.py
pipeline_debug_env/server/ui/: index.html
pipeline_debug_env/templates/: ecommerce_orders.yaml  financial_revenue.yaml  user_engagement.yaml
server/: app.py
tests/: test_fault_injector.py  test_grader.py
