[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-debug-env"
version = "0.1.0"
description = "OpenEnv RL environment for debugging data pipelines"
authors = [
  { name="Your Name" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "duckdb",
  "pandas",
  "pydantic"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_debug_env*"]
