[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-debug-env"
version = "0.1.0"
requires-python = ">=3.11"
description = "OpenEnv RL environment for debugging data pipelines"
authors = [
  { name="Your Name" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "duckdb",
  "pandas",
  "pydantic",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_debug_env*"]
